RESOLVED FIXED87438
[BlackBerry] History navigation caused google.com scale not kept
https://bugs.webkit.org/show_bug.cgi?id=87438
Summary [BlackBerry] History navigation caused google.com scale not kept
Jacky Jiang
Reported 2012-05-24 16:34:40 PDT
Steps to reproduce: 1) Open google.com. 2) navigate to poster circle (http://www.webkit.org/blog-files/3d-transforms/poster-circle.html). 3) click back button to go back to google. Expected: 4) Google renders same size as on initial load. Actual: 4) Google renders at the initial scale of poster circle (1.347).
Attachments
committed, r=tonikitoo (3.30 KB, patch)
2012-05-24 18:06 PDT, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2012-05-24 18:06:33 PDT
Created attachment 143941 [details] committed, r=tonikitoo
Antonio Gomes
Comment 2 2012-05-25 07:43:33 PDT
Comment on attachment 143941 [details] committed, r=tonikitoo View in context: https://bugs.webkit.org/attachment.cgi?id=143941&action=review > Source/WebKit/blackberry/Api/WebPage.cpp:901 > + if (m_mainFrame && m_mainFrame->document() && !(m_mainFrame->document()->viewportArguments() == defaultViewportArguments)) we should really add a != operator to ViewportArguments.
Jacky Jiang
Comment 3 2012-05-25 08:21:49 PDT
(In reply to comment #2) > (From update of attachment 143941 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=143941&action=review > > > Source/WebKit/blackberry/Api/WebPage.cpp:901 > > + if (m_mainFrame && m_mainFrame->document() && !(m_mainFrame->document()->viewportArguments() == defaultViewportArguments)) > > we should really add a != operator to ViewportArguments. Opened a bug for this: 87505.
Jacky Jiang
Comment 4 2012-05-25 08:54:40 PDT
Note You need to log in before you can comment on or make changes to this bug.